components/keycloak-operator/overlays/hub/keycloak-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hub-keycloak
  namespace: keycloak
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  host: keycloak.apps.acm.sharkbait.tech
  to:
    kind: Service
    name: hub-keycloak-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
